# muesli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  devenv.nix
.github/workflows/: ci.yml
benches/: session.rs
examples/: session_encode.rs
src/: de.rs  deserialize.rs  lib.rs  ser.rs  serialize.rs  value.rs
src/de/: raw.rs
src/value/: conversion.rs
tests/: fuzzing.rs  two_way_ser_de.rs
tests/data/: large.session
