[package]
name = "muesli"
description = "healthy implementation of PHP's serialization and session formats in Rust"
version = "0.1.0"
authors = ["vvvince <vvvince@ofcompute.rs>"]
edition = "2021"
rust-version = "1.79"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vvvinceocam/muesli"
keywords = ["serialization", "parser", "php"]
exclude = [".envrc", "devenv.*", ".github/"]

[dependencies]
winnow = { version = "0.7", features = ["simd"] }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"

[[bench]]
name = "session"
harness = false
